# alkahest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ROADMAP.md
alkahest/: CMakeLists.txt
alkahest/cmake/: APIExportFlags.cmake  CompilerWarnings.cmake  DefaultProjectSettings.cmake  Doxygen.cmake  PlatformDetection.cmake
alkahest/include/: alkahest.h
alkahest/include/alkahest/: init.h  log.h  macros.h  pch.h
alkahest/include/alkahest/platform/linux/: keys.h
alkahest/include/alkahest/systems/: _base.h  input.h  window.h
alkahest/include/alkahest/util/: allocator.h  input.h
alkahest/src/: init.cpp  log.cpp
alkahest/src/platform/apple/: sample.cpp
alkahest/src/platform/linux/: sample.cpp
alkahest/src/platform/linux/systems/: input.cpp  window.cpp
alkahest/src/platform/windows/: sample.cpp
alkahest/src/util/: allocator.cpp  input.cpp
sandbox/src/: main.cpp
scripts/: build  debug  docs  run  test
